client/src/generated/client/src/grammars/HTSXParser.ts
// Generated from client/src/grammars/HTSX.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import HTSXListener from "./HTSXListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class HTSXParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly SCRIPT = 49;
	public static readonly STYLE = 50;
	public static readonly AWAIT = 51;
	public static readonly PHI_CONSTANT = 52;
	public static readonly QUANTUM = 53;
	public static readonly RESONANCE = 54;
	public static readonly ENTANGLE = 55;
	public static readonly COLLAPSE = 56;
	public static readonly TIMES = 57;
	public static readonly DIVIDE = 58;
	public static readonly PLUS = 59;
	public static readonly MINUS = 60;
	public static readonly EQUALS = 61;
	public static readonly NOT_EQUALS = 62;
	public static readonly LESS_THAN = 63;
	public static readonly GREATER_THAN = 64;
	public static readonly AND = 65;
	public static readonly OR = 66;
	public static readonly NOT = 67;
	public static readonly NUMBER = 68;
	public static readonly STRING = 69;
	public static readonly BOOLEAN = 70;
	public static readonly IDENTIFIER = 71;
	public static readonly TEXT_CONTENT = 72;
	public static readonly WS = 73;
	public static readonly LINE_COMMENT = 74;
	public static readonly BLOCK_COMMENT = 75;
	public static readonly LPAREN = 76;
	public static readonly RPAREN = 77;
	public static readonly LBRACE = 78;
	public static readonly RBRACE = 79;
	public static readonly LBRACKET = 80;
	public static readonly RBRACKET = 81;
	public static readonly SEMICOLON = 82;
	public static readonly COMMA = 83;
	public static readonly DOT = 84;
	public static readonly COLON = 85;
	public static readonly ASSIGN = 86;
	public static readonly AT = 87;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_element = 1;
	public static readonly RULE_htsxElement = 2;
	public static readonly RULE_scriptBlock = 3;
	public static readonly RULE_styleBlock = 4;
	public static readonly RULE_attribute = 5;
	public static readonly RULE_expression = 6;
	public static readonly RULE_spiralExpression = 7;
	public static readonly RULE_phiOperation = 8;
	public static readonly RULE_quantumBinding = 9;
	public static readonly RULE_primary = 10;
	public static readonly RULE_eventHandler = 11;
	public static readonly RULE_interpolation = 12;
	public static readonly RULE_argumentList = 13;
	public static readonly RULE_tagName = 14;
	public static readonly RULE_attributeName = 15;
	public static readonly RULE_attributeValue = 16;
	public static readonly RULE_textContent = 17;
	public static readonly RULE_spiralScriptContent = 18;
	public static readonly RULE_cssContent = 19;
	public static readonly literalNames: (string | null)[] = [ null, "'</'",
                                                            "'/>'", "'<script'",
                                                            "'</script>'",
                                                            "'<style'",
                                                            "'</style>'",
                                                            "'phi('", "'resonance('",
                                                            "'quantum('",
                                                            "'entangle('",
                                                            "'collapse('",
                                                            "'this'", "'state'",
                                                            "'click'", "'change'",
                                                            "'input'", "'submit'",
                                                            "'load'", "'{{'",
                                                            "'}}'", "'div'",
                                                            "'span'", "'p'",
                                                            "'h1'", "'h2'",
                                                            "'h3'", "'h4'",
                                                            "'h5'", "'h6'",
                                                            "'img'", "'a'",
                                                            "'button'",
                                                            "'form'", "'table'",
                                                            "'tr'", "'td'",
                                                            "'SpiralComponent'",
                                                            "'QuantumRenderer'",
                                                            "'PhiVisualization'",
                                                            "'class'", "'id'",
                                                            "'src'", "'href'",
                                                            "'alt'", "'title'",
                                                            "'phiResonance'",
                                                            "'quantumState'",
                                                            "'spiralDepth'",
                                                            "'script'",
                                                            "'style'", "'await'",
                                                            null, "'quantum'",
                                                            "'resonance'",
                                                            "'entangle'",
                                                            "'collapse'",
                                                            "'*'", "'/'",
                                                            "'+'", "'-'",
                                                            "'=='", "'!='",
                                                            "'<'", "'>'",
                                                            "'&&'", "'||'",
                                                            "'!'", null,
                                                            null, null,
                                                            null, null,
                                                            null, null,
                                                            null, "'('",
                                                            "')'", "'{'",
                                                            "'}'", "'['",
                                                            "']'", "';'",
                                                            "','", "'.'",
                                                            "':'", "'='",
                                                            "'@'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, null,
                                                             null, "SCRIPT",
                                                             "STYLE", "AWAIT",
                                                             "PHI_CONSTANT",
                                                             "QUANTUM",
                                                             "RESONANCE",
                                                             "ENTANGLE",
                                                             "COLLAPSE",
                                                             "TIMES", "DIVIDE",
                                                             "PLUS", "MINUS",
                                                             "EQUALS", "NOT_EQUALS",
                                                             "LESS_THAN",
                                                             "GREATER_THAN",
                                                             "AND", "OR",
                                                             "NOT", "NUMBER",
                                                             "STRING", "BOOLEAN",
                                                             "IDENTIFIER",
                                                             "TEXT_CONTENT",
                                                             "WS", "LINE_COMMENT",
                                                             "BLOCK_COMMENT",
                                                             "LPAREN", "RPAREN",
                                                             "LBRACE", "RBRACE",
                                                             "LBRACKET",
                                                             "RBRACKET",
                                                             "SEMICOLON",
                                                             "COMMA", "DOT",
                                                             "COLON", "ASSIGN",
                                                             "AT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "element", "htsxElement", "scriptBlock", "styleBlock", "attribute",
		"expression", "spiralExpression", "phiOperation", "quantumBinding", "primary",
		"eventHandler", "interpolation", "argumentList", "tagName", "attributeName",
		"attributeValue", "textContent", "spiralScriptContent", "cssContent",
	];
	public get grammarFileName(): string { return "HTSX.g4"; }
	public get literalNames(): (string | null)[] { return HTSXParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return HTSXParser.symbolicNames; }
	public get ruleNames(): string[] { return HTSXParser.ruleNames; }
	public get serializedATN(): number[] { return HTSXParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, HTSXParser._ATN, HTSXParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, HTSXParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 43;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524328) !== 0) || ((((_la - 63)) & ~0x1F) === 0 && ((1 << (_la - 63)) & 33281) !== 0)) {
				{
				{
				this.state = 40;
				this.element();
				}
				}
				this.state = 45;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 46;
			this.match(HTSXParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public element(): ElementContext {
		let localctx: ElementContext = new ElementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, HTSXParser.RULE_element);
		try {
			this.state = 53;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 63:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 48;
				this.htsxElement();
				}
				break;
			case 72:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 49;
				this.textContent();
				}
				break;
			case 19:
			case 78:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 50;
				this.expression();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 51;
				this.scriptBlock();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 52;
				this.styleBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htsxElement(): HtsxElementContext {
		let localctx: HtsxElementContext = new HtsxElementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, HTSXParser.RULE_htsxElement);
		let _la: number;
		try {
			this.state = 84;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 55;
				this.match(HTSXParser.LESS_THAN);
				this.state = 56;
				this.tagName();
				this.state = 60;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 2147485183) !== 0) || _la===78 || _la===87) {
					{
					{
					this.state = 57;
					this.attribute();
					}
					}
					this.state = 62;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 63;
				this.match(HTSXParser.GREATER_THAN);
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524328) !== 0) || ((((_la - 63)) & ~0x1F) === 0 && ((1 << (_la - 63)) & 33281) !== 0)) {
					{
					{
					this.state = 64;
					this.element();
					}
					}
					this.state = 69;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 70;
				this.match(HTSXParser.T__0);
				this.state = 71;
				this.tagName();
				this.state = 72;
				this.match(HTSXParser.GREATER_THAN);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 74;
				this.match(HTSXParser.LESS_THAN);
				this.state = 75;
				this.tagName();
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 2147485183) !== 0) || _la===78 || _la===87) {
					{
					{
					this.state = 76;
					this.attribute();
					}
					}
					this.state = 81;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 82;
				this.match(HTSXParser.T__1);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public scriptBlock(): ScriptBlockContext {
		let localctx: ScriptBlockContext = new ScriptBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, HTSXParser.RULE_scriptBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this.match(HTSXParser.T__2);
			this.state = 90;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 2147485183) !== 0) || _la===78 || _la===87) {
				{
				{
				this.state = 87;
				this.attribute();
				}
				}
				this.state = 92;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 93;
			this.match(HTSXParser.GREATER_THAN);
			this.state = 94;
			this.spiralScriptContent();
			this.state = 95;
			this.match(HTSXParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public styleBlock(): StyleBlockContext {
		let localctx: StyleBlockContext = new StyleBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, HTSXParser.RULE_styleBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 97;
			this.match(HTSXParser.T__4);
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 2147485183) !== 0) || _la===78 || _la===87) {
				{
				{
				this.state = 98;
				this.attribute();
				}
				}
				this.state = 103;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 104;
			this.match(HTSXParser.GREATER_THAN);
			this.state = 105;
			this.cssContent();
			this.state = 106;
			this.match(HTSXParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let localctx: AttributeContext = new AttributeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, HTSXParser.RULE_attribute);
		let _la: number;
		try {
			this.state = 119;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 40:
			case 41:
			case 42:
			case 43:
			case 44:
			case 45:
			case 46:
			case 47:
			case 48:
			case 50:
			case 71:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 108;
				this.attributeName();
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===86) {
					{
					this.state = 109;
					this.match(HTSXParser.ASSIGN);
					this.state = 110;
					this.attributeValue();
					}
				}

				}
				break;
			case 78:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 113;
				this.match(HTSXParser.LBRACE);
				this.state = 114;
				this.expression();
				this.state = 115;
				this.match(HTSXParser.RBRACE);
				}
				break;
			case 87:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 117;
				this.match(HTSXParser.AT);
				this.state = 118;
				this.eventHandler();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, HTSXParser.RULE_expression);
		try {
			this.state = 126;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 78:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 121;
				this.match(HTSXParser.LBRACE);
				this.state = 122;
				this.spiralExpression(0);
				this.state = 123;
				this.match(HTSXParser.RBRACE);
				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 125;
				this.interpolation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public spiralExpression(): SpiralExpressionContext;
	public spiralExpression(_p: number): SpiralExpressionContext;
	// @RuleVersion(0)
	public spiralExpression(_p?: number): SpiralExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: SpiralExpressionContext = new SpiralExpressionContext(this, this._ctx, _parentState);
		let _prevctx: SpiralExpressionContext = localctx;
		let _startState: number = 14;
		this.enterRecursionRule(localctx, 14, HTSXParser.RULE_spiralExpression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 129;
				this.primary();
				}
				break;
			case 2:
				{
				this.state = 130;
				this.match(HTSXParser.NOT);
				this.state = 131;
				this.spiralExpression(4);
				}
				break;
			case 3:
				{
				this.state = 132;
				this.match(HTSXParser.AWAIT);
				this.state = 133;
				this.spiralExpression(3);
				}
				break;
			case 4:
				{
				this.state = 134;
				this.phiOperation();
				}
				break;
			case 5:
				{
				this.state = 135;
				this.quantumBinding();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 163;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 161;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
					case 1:
						{
						localctx = new SpiralExpressionContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, HTSXParser.RULE_spiralExpression);
						this.state = 138;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 139;
						_la = this._input.LA(1);
						if(!(((((_la - 57)) & ~0x1F) === 0 && ((1 << (_la - 57)) & 15) !== 0))) {
						this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 140;
						this.spiralExpression(8);
						}
						break;
					case 2:
						{
						localctx = new SpiralExpressionContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, HTSXParser.RULE_spiralExpression);
						this.state = 141;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 142;
						_la = this._input.LA(1);
						if(!(((((_la - 61)) & ~0x1F) === 0 && ((1 << (_la - 61)) & 15) !== 0))) {
						this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 143;
						this.spiralExpression(7);
						}
						break;
					case 3:
						{
						localctx = new SpiralExpressionContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, HTSXParser.RULE_spiralExpression);
						this.state = 144;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 145;
						_la = this._input.LA(1);
						if(!(_la===65 || _la===66)) {
						this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 146;
						this.spiralExpression(6);
						}
						break;
					case 4:
						{
						localctx = new SpiralExpressionContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, HTSXParser.RULE_spiralExpression);
						this.state = 147;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 148;
						this.match(HTSXParser.DOT);
						this.state = 149;
						this.match(HTSXParser.IDENTIFIER);
						}
						break;
					case 5:
						{
						localctx = new SpiralExpressionContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, HTSXParser.RULE_spiralExpression);
						this.state = 150;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 151;
						this.match(HTSXParser.LBRACKET);
						this.state = 152;
						this.spiralExpression(0);
						this.state = 153;
						this.match(HTSXParser.RBRACKET);
						}
						break;
					case 6:
						{
						localctx = new SpiralExpressionContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, HTSXParser.RULE_spiralExpression);
						this.state = 155;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 156;
						this.match(HTSXParser.LPAREN);
						this.state = 158;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16256) !== 0) || ((((_la - 51)) & ~0x1F) === 0 && ((1 << (_la - 51)) & 35586051) !== 0)) {
							{
							this.state = 157;
							this.argumentList();
							}
						}
